@@ -6,12 +6,6 @@ import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VirtualFile;
-import org.stepik.core.StepikProjectManager;
-import org.stepik.core.StudyUtils;
-import org.stepik.core.courseFormat.StepNode;
-import org.stepik.core.courseFormat.StepType;
-import org.stepik.core.courseFormat.StudyNode;
-import org.stepik.core.stepik.StepikConnectorLogin;
 import javafx.stage.FileChooser;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -22,6 +16,12 @@ import org.stepik.api.objects.submissions.Column;
 import org.stepik.api.objects.submissions.Submission;
 import org.stepik.api.objects.submissions.Submissions;
 import org.stepik.api.queries.submissions.StepikSubmissionsPostQuery;
+import org.stepik.core.StepikProjectManager;
+import org.stepik.core.StudyUtils;
+import org.stepik.core.courseFormat.StepNode;
+import org.stepik.core.courseFormat.StepType;
+import org.stepik.core.courseFormat.StudyNode;
+import org.stepik.core.stepik.StepikAuthManager;
 import org.stepik.plugin.actions.SendAction;
 import org.w3c.dom.Node;
 import org.w3c.dom.events.Event;
@@ -41,18 +41,25 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
+import static java.util.Collections.emptyList;
+import static org.stepik.core.stepik.StepikAuthManager.authAndGetStepikApiClient;
 import static org.stepik.core.utils.ProjectFilesUtils.getOrCreateSrcDirectory;
 
 class FormListener implements EventListener {
     static final String EVENT_TYPE_SUBMIT = "submit";
     private static final Logger logger = Logger.getInstance(FormListener.class);
+    private static final ExecutorService executor = Executors.newSingleThreadExecutor();
     private final Project project;
+    private final StudyBrowserWindow browser;
 
-    FormListener(@NotNull Project project) {
+    FormListener(@NotNull Project project, @NotNull StudyBrowserWindow browser) {
         this.project = project;
+        this.browser = browser;
     }
 
     @Override
@@ -75,37 +82,35 @@ class FormListener implements EventListener {
             Elements elements = new Elements(form.getElements());
 
             try {
-                switch (elements.getStatus()) {
-                    case "":
-                    case "correct":
-                    case "wrong":
-                    case "timeLeft":
+                switch (elements.getAction()) {
+                    case "get_first_attempt":
+                    case "get_attempt":
                         boolean locked = elements.isLocked();
                         if (!locked) {
                             getAttempt(stepNode);
                             StepikProjectManager.updateSelection(project);
                         }
                         break;
-                    case "active":
+                    case "submit":
                         String typeStr = elements.getType();
                         StepType type = StepType.of(typeStr);
                         boolean isFromFile = elements.isFromFile();
                         String data = isFromFile ? getDataFromFile(stepNode) : null;
                         long attemptId = elements.getAttemptId();
-
-                        if (!isFromFile) {
-                            sendStep(stepNode, elements, type, attemptId, null);
-                        } else if (data != null) {
-                            sendStep(stepNode, elements, type, attemptId, data);
-                        }
+                        sendStep(stepNode, elements, type, attemptId, data);
+                        break;
+                    case "need_login":
+                        executor.execute(() -> StepikAuthManager.authentication(true));
                         break;
                     default:
+                        browser.hideLoadAnimation();
                         return;
                 }
             } catch (StepikClientException e) {
                 logger.warn(e);
             }
             event.preventDefault();
+            event.stopPropagation();
         }
     }
 
@@ -131,7 +136,7 @@ class FormListener implements EventListener {
     }
 
     private void getAttempt(@NotNull StepNode node) {
-        StepikApiClient stepikApiClient = StepikConnectorLogin.authAndGetStepikApiClient();
+        StepikApiClient stepikApiClient = authAndGetStepikApiClient(true);
 
         stepikApiClient.attempts()
                 .post()
@@ -153,7 +158,7 @@ class FormListener implements EventListener {
                 indicator.setIndeterminate(true);
 
                 try {
-                    StepikApiClient stepikApiClient = StepikConnectorLogin.authAndGetStepikApiClient();
+                    StepikApiClient stepikApiClient = authAndGetStepikApiClient(true);
 
                     StepikSubmissionsPostQuery query = stepikApiClient.submissions()
                             .post()
@@ -166,6 +171,11 @@ class FormListener implements EventListener {
                         case STRING:
                             String text = getStringData(elements);
                             query.text(text);
+                            break;
+                        case FREE_ANSWER:
+                            text = getStringData(elements);
+                            query.text(text);
+                            query.attachments(emptyList());
                             break;
                         case NUMBER:
                             String number = getStringData(elements);
@@ -205,8 +215,8 @@ class FormListener implements EventListener {
                     Submissions submissions = query.execute();
 
                     if (!submissions.isEmpty()) {
-                        Submission submission = submissions.getSubmissions().get(0);
-                        SendAction.checkStepStatus(project, stepNode, submission.getId(), indicator);
+                        Submission submission = submissions.getFirst();
+                        SendAction.checkStepStatus(project, stepikApiClient, stepNode, submission.getId(), indicator);
                     }
                 } catch (StepikClientException e) {
                     logger.warn("Failed send step from browser", e);
@@ -322,8 +332,8 @@ class FormListener implements EventListener {
         }
 
         @NotNull
-        String getStatus() {
-            Node item = elements.namedItem("status");
+        String getAction() {
+            Node item = elements.namedItem("action");
             if (item instanceof HTMLInputElement) {
                 return ((HTMLInputElement) item).getValue();
             }
@@ -344,12 +354,13 @@ class FormListener implements EventListener {
         @NotNull
         String getInputValue(@NotNull String name) {
             Node item = elements.namedItem(name);
+            String value = null;
             if (item instanceof HTMLInputElement) {
-                return ((HTMLInputElement) item).getValue();
+                value = ((HTMLInputElement) item).getValue();
             } else if (item instanceof HTMLTextAreaElement) {
-                return ((HTMLTextAreaElement) item).getValue();
+                value = ((HTMLTextAreaElement) item).getValue();
             }
-            return "";
+            return value != null ? value : "";
         }
 
         boolean isFromFile() {
@@ -370,6 +381,7 @@ class FormListener implements EventListener {
             return Boolean.valueOf(getInputValue("locked"));
         }
 
+        @NotNull
         @Override
         public Iterator<Node> iterator() {
             return new Iterator<Node>() {
